2017-04-26  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28289.

	* src/html/classic/omp.xsl (html-edit-scanner-form-credentials): Show
	the certificate elements only if the type is "cc".
	(html-edit-scanner-form): Only add the username + password credential
	selection if the host is a unix socket as there is no type selection.

2017-04-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28135.

	* src/gsad.c (exec_omp_post): Add log message on successful login.

2017-04-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (dashboard): Check if user has the get_aggregates
	permission for dashboards and add case for when the user may
	get Tasks but not SecInfo.

	* src/html/classic/gsad.xsl (html-gsa-navigation): Show "Dashboard"
	menu items only if user has the get_aggregates permission.

	* src/html/classic/omp.xsl (html-tasks-table, html-cpe-table)
	(html-cve-table, html-nvt-table, html-ovaldef-table)
	(html-cert_bund_adv-table, html-dfn_cert_adv-table)
	(html-allinfo-table, html-notes-table, html-overrides-table)
	(html-reports-table, html-results-table, html-hosts-table)
	(html-oss-table): Show top dashboard only if user has the
	get_aggregates permission.

2017-04-03  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28139.

	Move overflow-y CSS rule to remove scroll bar from login page.

	* src/html/classic/css/gsa-base.css (html): Remove overflow-y rule.

	* src/html/classic/css/gsa-style.css (html): New rule-set.

2017-03-28  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad.c (handle_request): Handle redirects in OMP get requests.

	* src/gsad_omp.c (dashboard): Use secinfo dashboard if user has no
	get_tasks permission, redirect to get_system_reports page if user also
	has no get_info permission and redirect to about page if user also
	has no get_system_reports permission.

2017-03-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28079.
