@@ -1,3 +1,10 @@
+2017-04-28  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	Backport r28297.
+
+	* src/gsad.c (exec_omp_post): Do not overwrite user's language if none
+	is set in save_my_settings_omp.
+
 2017-04-26  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	Backport r28289.
